# telegram-kol-analyzer

./: .gitignore  README.md  pyproject.toml
config/: groups.example.yaml
docs/: runbook.md
docs/plans/: 2026-04-07-telegram-kol-winrate-design.md  2026-04-07-telegram-kol-winrate.md  2026-04-17-telegram-web-workbench-design.md  2026-04-17-telegram-web-workbench.md  2026-04-18-telegram-ai-panel-simplification-design.md  2026-04-18-telegram-ai-panel-simplification.md  2026-04-18-telegram-ai-prompt-editor-and-chronology-design.md  2026-04-18-telegram-ai-prompt-editor-and-chronology.md
src/telegram_kol_research/: __init__.py  (+23 more)
tests/: test_analytics.py  test_backfill_windows.py  test_candidates.py  test_checkpoint_repair.py  test_cli_smoke.py  test_dataset_export.py  test_db_bootstrap.py  test_dialog_filtering.py  test_event_routing.py  test_group_config.py  test_live_update_stream.py  test_live_updates.py  test_llm_adjudication.py  test_llm_chat_references.py  test_llm_chat_request.py  test_llm_chat_scope.py  test_llm_import.py  test_raw_ingest.py  test_raw_ingest_idempotency.py  test_raw_ingest_live_events.py  test_readme_commands.py  test_readme_web_commands.py  test_reconcile.py  test_reconcile_live_history.py  test_report_cli_db.py  test_report_trade_ideas.py  test_reporting.py  test_review_cli_db.py  test_review_queue.py  test_sync_candidates.py  test_sync_cli.py  test_sync_modes.py  test_sync_ocr.py  test_sync_persistence.py  test_sync_trade_ideas.py  test_sync_windows.py  test_telegram_fetch.py  test_telegram_live_listener.py  test_trade_merge.py  test_web_app.py  (+9 more)
(+10 files in other folders)
